--- a/index.html
+++ b/index.html
@@ -43,9 +43,14 @@
     <header class="header">
       <div class="container container-header">
         <nav class="header-nav">
-          <a href="./index.html" class="header-logo">
-            Web<span class="header-color-logo">Studio</span>
-          </a>
+          <div class="div-logo-icon">
+            <a href="./index.html" class="header-logo">
+              Web<span class="header-color-logo">Studio</span>
+            </a>
+            <svg class="icon-solid_menu" width="24" height="24">
+              <use href="./images/icons.svg#icon-solid_menu"></use>
+            </svg>
+          </div>
 
           <ul class="header-menu">
             <li class="li-header-menu">
@@ -84,6 +89,80 @@
           </ul>
         </address>
       </div>
+
+      <!-- ========= header-menu-form-start ========= -->
+      <div class="header-menu-form is-open-header">
+        <!-- is-open-header -->
+        <button type="button" class="header-menu-close">
+          <svg class="header-menu-icon-close" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+
+        <ul class="header-menu-nav-ul">
+          <li class="header-menu-nav-li">
+            <a href=""
+              ><h2 class="header-menu-nav-h efects-header-menu">Studio</h2></a
+            >
+          </li>
+          <li class="header-menu-nav-li">
+            <h2 class="header-menu-nav-h">Portfolio</h2>
+          </li>
+          <li class="header-menu-nav-li">
+            <h2 class="header-menu-nav-h">Contacts</h2>
+          </li>
+        </ul>
+
+        <ul class="header-menu-address-ul">
+          <li class="header-menu-address-li">
+            <a href="tel:+110001111111" class="header-menu-address-a"
+              ><h3 class="header-menu-address-h efects-header-menu">
+                +11(000)1111111
+              </h3></a
+            >
+          </li>
+          <li class="header-menu-address-li">
+            <a href="mailto:info@devstudio.com" class="header-menu-address-a"
+              ><h3 class="header-menu-address-h">info@devstudio.com</h3></a
+            >
+          </li>
+        </ul>
+
+        <ul class="header-menu-address-ul-icon">
+          <li class="header-menu-icon-li">
+            <a href="" class="header-menu-icon-a">
+              <svg class="icon-header-menu" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram1"></use>
+              </svg>
+            </a>
+          </li>
+
+          <li class="header-menu-icon-li">
+            <a href="" class="header-menu-icon-a">
+              <svg class="icon-header-menu" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter1"></use>
+              </svg>
+            </a>
+          </li>
+
+          <li class="header-menu-icon-li">
+            <a href="" class="header-menu-icon-a">
+              <svg class="icon-header-menu" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook1"></use>
+              </svg>
+            </a>
+          </li>
+
+          <li class="header-menu-icon-li">
+            <a href="" class="header-menu-icon-a">
+              <svg class="icon-header-menu" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin1"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <!-- ========= header-menu-form-end ========= -->
     </header>
 
     <main class="main">
@@ -159,6 +238,7 @@
           <ul class="ul-main-list-team">
             <li class="li-main-list-team">
               <img
+                srcset="./images/img1.jpg 1x, ./images/img1@2x.jpg 2x"
                 src="./images/img1.jpg"
                 alt="Team Card 1"
                 width="264"
@@ -205,6 +285,7 @@
             </li>
             <li class="li-main-list-team">
               <img
+                srcset="./images/img2.jpg 1x, ./images/img2@2x.jpg 2x"
                 src="./images/img2.jpg"
                 alt="Team Card 2"
                 width="264"
@@ -251,6 +332,7 @@
             </li>
             <li class="li-main-list-team">
               <img
+                srcset="./images/img3.jpg 1x, ./images/img3@2x.jpg 2x"
                 src="./images/img3.jpg"
                 alt="Team Card 3"
                 width="264"
@@ -297,6 +379,7 @@
             </li>
             <li class="li-main-list-team">
               <img
+                srcset="./images/img4.jpg 1x, ./images/img4@2x.jpg 2x"
                 src="./images/img4.jpg"
                 alt="Team Card 4"
                 width="264"
@@ -352,12 +435,32 @@
           <ul class="ul-main-list-portfolio">
             <li class="li-main-list-portfolio">
               <div class="main-list-portfolio-image">
-                <img
-                  src="./images/ProjectCard1.jpg"
-                  alt="Banking App"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/ProjectCard1.jpg    1x,
+                      ./images/ProjectCard1@x2.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/ProjectCard1.jpg    1x,
+                      ./images/ProjectCard1@x2.jpg 2x
+                    "
+                  />
+                  <img
+                    srcset="
+                      ./images/img1-tel.jpg    1x,
+                      ./images/img1-tel@2x.jpg 2x
+                    "
+                    src="./images/img1-tel.jpg"
+                    alt="Banking App"
+                    width="288"
+                    height="280"
+                  />
+                </picture>
                 <p class="main-list-portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -371,12 +474,32 @@
             </li>
             <li class="li-main-list-portfolio">
               <div class="main-list-portfolio-image">
-                <img
-                  src="./images/ProjectCard2.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/ProjectCard2.jpg    1x,
+                      ./images/ProjectCard2@x2.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/ProjectCard2.jpg    1x,
+                      ./images/ProjectCard2@x2.jpg 2x
+                    "
+                  />
+                  <img
+                    srcset="
+                      ./images/img2-tel.jpg    1x,
+                      ./images/img2-tel@2x.jpg 2x
+                    "
+                    src="./images/img2-tel.jpg"
+                    alt="Cashless Payment"
+                    width="288"
+                    height="280"
+                  />
+                </picture>
                 <p class="main-list-portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -390,12 +513,32 @@
             </li>
             <li class="li-main-list-portfolio">
               <div class="main-list-portfolio-image">
-                <img
-                  src="./images/ProjectCard3.jpg"
-                  alt="Meditation App"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/ProjectCard3.jpg    1x,
+                      ./images/ProjectCard2@x3.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/ProjectCard3.jpg    1x,
+                      ./images/ProjectCard2@x3.jpg 2x
+                    "
+                  />
+                  <img
+                    srcset="
+                      ./images/img3-tel.jpg    1x,
+                      ./images/img3-tel@2x.jpg 2x
+                    "
+                    src="./images/img3-tel.jpg"
+                    alt="Meditation App"
+                    width="288"
+                    height="280"
+                  />
+                </picture>
                 <p class="main-list-portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -410,12 +553,32 @@
 
             <li class="li-main-list-portfolio">
               <div class="main-list-portfolio-image">
-                <img
-                  src="./images/ProjectCard4.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/ProjectCard4.jpg    1x,
+                      ./images/ProjectCard2@x4.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/ProjectCard4.jpg    1x,
+                      ./images/ProjectCard2@x4.jpg 2x
+                    "
+                  />
+                  <img
+                    srcset="
+                      ./images/img4-tel.jpg    1x,
+                      ./images/img4-tel@2x.jpg 2x
+                    "
+                    src="./images/img4-tel.jpg"
+                    alt="Taxi Service"
+                    width="288"
+                    height="280"
+                  />
+                </picture>
                 <p class="main-list-portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -429,12 +592,32 @@
             </li>
             <li class="li-main-list-portfolio">
               <div class="main-list-portfolio-image">
-                <img
-                  src="./images/ProjectCard5.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/ProjectCard5.jpg    1x,
+                      ./images/ProjectCard2@x5.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/ProjectCard5.jpg    1x,
+                      ./images/ProjectCard2@x5.jpg 2x
+                    "
+                  />
+                  <img
+                    srcset="
+                      ./images/img5-tel.jpg    1x,
+                      ./images/img5-tel@2x.jpg 2x
+                    "
+                    src="./images/img5-tel.jpg"
+                    alt="Screen Illustrations"
+                    width="288"
+                    height="280"
+                  />
+                </picture>
                 <p class="main-list-portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -448,12 +631,32 @@
             </li>
             <li class="li-main-list-portfolio">
               <div class="main-list-portfolio-image">
-                <img
-                  src="./images/ProjectCard6.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    media="(min-width: 768px)"
+                    srcset="
+                      ./images/ProjectCard6.jpg    1x,
+                      ./images/ProjectCard2@x6.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width: 1158px)"
+                    srcset="
+                      ./images/ProjectCard6.jpg    1x,
+                      ./images/ProjectCard2@x6.jpg 2x
+                    "
+                  />
+                  <img
+                    srcset="
+                      ./images/img6-tel.jpg    1x,
+                      ./images/img6-tel@2x.jpg 2x
+                    "
+                    src="./images/img6-tel.jpg"
+                    alt="Online Courses"
+                    width="288"
+                    height="280"
+                  />
+                </picture>
                 <p class="main-list-portfolio-overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -470,52 +673,55 @@
       </section>
     </main>
 
+    <!-- footer -->
     <footer class="footer">
       <div class="container container-footer">
-        <div class="footer-info">
-          <a href="./index.html" class="footer-logo">
-            Web<span class="footer-color-logo">Studio</span>
-          </a>
-          <p class="footer-p">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
-        <div class="footer-social-media">
-          <p class="footer-social-media-p">Social media</p>
-          <ul class="ul-footer-social-media">
-            <li class="icon-social-media-li">
-              <a href="" class="icon-social-media-a">
-                <svg class="icon-footer" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram1"></use>
-                </svg>
-              </a>
-            </li>
+        <div class="dwa-footer-conteiner">
+          <div class="footer-info">
+            <a href="./index.html" class="footer-logo">
+              Web<span class="footer-color-logo">Studio</span>
+            </a>
+            <p class="footer-p">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+          <div class="footer-social-media">
+            <p class="footer-social-media-p">Social media</p>
+            <ul class="ul-footer-social-media">
+              <li class="icon-social-media-li">
+                <a href="" class="icon-social-media-a">
+                  <svg class="icon-footer" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram1"></use>
+                  </svg>
+                </a>
+              </li>
 
-            <li class="icon-social-media-li">
-              <a href="" class="icon-social-media-a">
-                <svg class="icon-footer" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter1"></use>
-                </svg>
-              </a>
-            </li>
+              <li class="icon-social-media-li">
+                <a href="" class="icon-social-media-a">
+                  <svg class="icon-footer" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter1"></use>
+                  </svg>
+                </a>
+              </li>
 
-            <li class="icon-social-media-li">
-              <a href="" class="icon-social-media-a">
-                <svg class="icon-footer" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook1"></use>
-                </svg>
-              </a>
-            </li>
+              <li class="icon-social-media-li">
+                <a href="" class="icon-social-media-a">
+                  <svg class="icon-footer" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook1"></use>
+                  </svg>
+                </a>
+              </li>
 
-            <li class="icon-social-media-li">
-              <a href="" class="icon-social-media-a">
-                <svg class="icon-footer" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin1"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+              <li class="icon-social-media-li">
+                <a href="" class="icon-social-media-a">
+                  <svg class="icon-footer" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin1"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
         <!-- footer form -->
         <div class="footer_form">
@@ -621,8 +827,10 @@
                   <use
                     href="./images/icons.svg#icon-Property"
                   ></use></svg></span
-              >I accept the terms and conditions of the
-              <a href="" class="form_text_a">Privacy Policy</a></label
+              ><span class="span-p"
+                >I accept the terms and conditions of the
+                <a href="" class="form_text_a">Privacy Policy</a></span
+              ></label
             >
           </div>
           <button type="submit" class="form_button">Sent</button>
