--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       </div>
 
       <!-- ========= header-menu-form-start ========= -->
-      <div class="header-menu-form is-open-header">
+      <div class="header-menu-form">
         <!-- is-open-header -->
         <button type="button" class="header-menu-close">
           <svg class="header-menu-icon-close" width="8" height="8">
