--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta content="description" name="goit_homework_1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- normalize 2-->
 
     <link
