--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                   <use href="./images/icons.svg#icon-antenna1"></use>
                 </svg>
               </div>
-              <h3 class="main-h">Strategy</h3>
+              <div class="main-h-div"><h3 class="main-h">Strategy</h3></div>
               <p class="main-p">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
